--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
                 </svg>
                 <p class="leading-relaxed mb-6">The technologies could launch a new era of fake news and online misinformation.AI has many ethical problems. But sometimes it can also be the solution. You can use AI in unethical ways to for example make and spread fake news, but you can also use it to do good, for example, to combat misinformation.</p>
                 <a class="inline-flex items-center">
-                  <img alt="testimonial" src="http://wire16.frascatiscienza.it/media/k2/items/cache/ba0166c7a50d96eb270097f3f911e08a_M.jpg" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                   <img alt="img" src="../static/prof.jpg"  class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center" >
                   <span class="flex-grow flex flex-col pl-4">
                     <span class="title-font font-medium text-gray-900">Francesco Nucci</span>
                     <span class="text-gray-500 text-sm">Applications research director at the Engineering Group, based in Italy.</span>
